--- a/Project2/makefile
+++ b/Project2/makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -fpic -lm -std=c99 -w
 
 all: main.c
 	gcc -o program main.c $(CFLAGS)
-	./program CoinW16.txt
+	./program testing.txt
 				
 clean:
 	rm -f program
